--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babel-cli": "^6.26.0",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-power-assert": "^3.0.0"
+    "babel-preset-power-assert": "^3.0.0",
+    "chalk": "^2.4.1",
+    "commander": "^2.18.0"
   }
 }
