--- a/package.json
+++ b/package.json
@@ -8,10 +8,21 @@
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-power-assert": "^3.0.0",
     "chalk": "^2.4.1",
-    "commander": "^2.18.0"
+    "commander": "^2.18.0",
+    "jest": "^23.6.0",
+    "power-assert": "^1.6.1"
+  },
+  "scripts": {
+    "test": "jest --verbose",
+    "babel-node": "babel-node --presets=env"
+  },
+  "jest": {
+    "testURL": "http://localhost:8080",
+    "testEnvironment": "node"
   }
 }
