Impliment redux handlebars

--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-power-assert": "^3.0.0",
+    "camelcase": "^5.0.0",
     "chalk": "^2.4.1",
     "commander": "^2.18.0",
+    "fs-extra": "^7.0.0",
+    "handlebars": "^4.0.12",
     "jest": "^23.6.0",
+    "pluralize": "^7.0.0",
     "power-assert": "^1.6.1",
+    "react-router-redux": "^4.0.8",
+    "redux-logger": "^3.0.6",
+    "simple-uppercamelcase": "^1.0.0",
+    "styled-components": "^3.4.9",
     "through2": "^2.0.3",
     "vinyl-fs": "^3.0.3"
   },
